--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,9 @@ main .cells-container .cell {
   width: calc(100% / 10);
   height: calc(100% / 10);
   border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 /* 
 ?--------
