--- a/css/utility.css
+++ b/css/utility.css
@@ -1,18 +1,26 @@
 /* 
 ?--------
-!FLEX
+!Display
 ?--------
 */
 .flex {
   display: flex;
 }
+.none {
+  display: none;
+}
+/* 
+?--------
+!Centratura
+?--------
+*/
 .center {
   align-items: center;
   justify-content: center;
 }
 /* 
 ?--------
-!ELEMENTO BOTTONE
+!Bottone
 ?--------
 */
 .btn {
