feat: eventi click su bottoni e sulle caselle

--- a/css/utility.css
+++ b/css/utility.css
@@ -18,6 +18,9 @@
   align-items: center;
   justify-content: center;
 }
+.text-center {
+  text-align: center;
+}
 /* 
 ?--------
 !Bottone
@@ -25,4 +28,13 @@
 */
 .btn {
   padding: 0px 30px;
+  height: 100%;
+}
+/* 
+?--------
+!Colori
+?--------
+*/
+.cell-bg {
+  background-color: blue;
 }
